--- a/app.json
+++ b/app.json
@@ -4,6 +4,9 @@
       "eas": {
         "projectId": "4fd144b9-8ab7-4a75-9086-b1351f87eacb"
       }
+    },
+    "android": {
+      "package": "com.nikhil123.app"
     }
   }
 }
